views: support menu prefix searching

Combobox menus support this already, but on Mac all menus should support it
instead of Windows/Linux-style mnemonics for items. This change:

1) Adds a new MenuConfig knob for whether the platform behaves this way;
2) Adds PrefixSelector::WillContinueSelection() to expose whether the
   PrefixSelector search is still "live" (versus having timed out);
3) Adds logic to MenuController to only activate items on VKEY_SPACE when the
   PrefixSelector is not still accumulating a prefix search;
4) Changes SubmenuView::GetTextForRow() to use the accessible name for the row
   instead of the raw title. Not doing this causes prefix searches to fail
   because the raw title includes mnemonic-marking ampersands;
5) Disables MenuRunnerTest.{,Non}LatinMnemonic on Mac;
6) Adds MenuRunnerTest.PrefixSelect to test most of this behavior on Mac.

Bug: 845466
Change-Id: I5d1e2c940026560d1e542263d99911889f52c742
Reviewed-on: https://chromium-review.googlesource.com/1187062
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586716}
Former-commit-id: c3c431a27cb8043f057e4bfd167808230d0bb4d1