ui/views/controls/menu/menu_config.cc
@@ -68,7 +68,8 @@ MenuConfig::MenuConfig()
       vertical_touchable_menu_item_padding(8),
       padded_separator_left_margin(64),
       arrow_key_selection_wraps(true),
-      show_context_menu_accelerators(true) {
+      show_context_menu_accelerators(true),
+      all_menus_use_prefix_selection(false) {
   Init();
 }
 
