ui/views/controls/prefix_selector.h
@@ -14,6 +14,10 @@
 #include "ui/base/ime/text_input_client.h"
 #include "ui/views/views_export.h"
 
+namespace base {
+class TickClock;
+}
+
 namespace views {
 
 class PrefixDelegate;
@@ -28,6 +32,10 @@ class VIEWS_EXPORT PrefixSelector : public ui::TextInputClient {
 
   // Invoked from the view when it loses focus.
   void OnViewBlur();
+
+  // Returns whether a key typed now would continue the existing search or start
+  // a new search.
+  bool ShouldContinueSelection() const;
 
   // ui::TextInputClient:
   void SetCompositionText(const ui::CompositionText& composition) override;
@@ -63,6 +71,10 @@ class VIEWS_EXPORT PrefixSelector : public ui::TextInputClient {
   ukm::SourceId GetClientSourceForMetrics() const override;
   bool ShouldDoLearning() override;
 
+  void set_tick_clock_for_testing(const base::TickClock* clock) {
+    tick_clock_ = clock;
+  }
+
  private:
   // Invoked when text is typed. Tries to change the selection appropriately.
   void OnTextInput(const base::string16& text);
@@ -81,6 +93,10 @@ class VIEWS_EXPORT PrefixSelector : public ui::TextInputClient {
   base::TimeTicks time_of_last_key_;
 
   base::string16 current_text_;
+
+  // TickClock used for getting the time of the current keystroke, used for
+  // continuing or restarting selections.
+  const base::TickClock* tick_clock_;
 
   DISALLOW_COPY_AND_ASSIGN(PrefixSelector);
 };
