chrome/browser/ui/views/menu_controller_interactive_uitest.cc
@@ -57,10 +57,12 @@ typedef MenuControllerMnemonicTest<ui::VKEY_DIVIDE,1>
     MenuControllerMnemonicTestMnemonicMatch;
 
 #if defined(OS_MACOSX)
-// Mnemonics aren't used on macOS.
+// Mnemonics and activation by title match aren't used on macOS.
 #define MAYBE_MnemonicMatch DISABLED_MnemonicMatch
+#define MAYBE_TitleMatch DISABLED_TitleMatch
 #else
 #define MAYBE_MnemonicMatch MnemonicMatch
+#define MAYBE_TitleMatch TitleMatch
 #endif
 
 VIEW_TEST(MenuControllerMnemonicTestMnemonicMatch, MAYBE_MnemonicMatch);
@@ -70,7 +72,7 @@ VIEW_TEST(MenuControllerMnemonicTestMnemonicMatch, MAYBE_MnemonicMatch);
 typedef MenuControllerMnemonicTest<ui::VKEY_T,2>
     MenuControllerMnemonicTestTitleMatch;
 
-VIEW_TEST(MenuControllerMnemonicTestTitleMatch, TitleMatch);
+VIEW_TEST(MenuControllerMnemonicTestTitleMatch, MAYBE_TitleMatch);
 
 // Pressing an arbitrary key should not execute any commands.
 typedef MenuControllerMnemonicTest<ui::VKEY_A,0>
